[tool.poetry]
name = "aries_cloudagent"
version = "0.10.1"
description = "Hyperledger Aries Cloud Agent Python (ACA-Py) is a foundation for building decentralized identity applications and services running in non-mobile environments. "
authors = ["Hyperledger Aries <aries@lists.hyperledger.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "aries_cloudagent"}, { include = 'bin', format = 'sdist' }]
classifiers = [
            "Programming Language :: Python :: 3",
            "License :: OSI Approved :: Apache Software License",
	    "Operating System :: OS Independent",
]
repository = "https://github.com/hyperledger/aries-cloudagent-python"


[tool.poetry.dependencies]
python = "^3.9"
aiohttp="~3.8.1"
aiohttp-apispec="~2.2.1"
aiohttp-cors="~0.7.0"
aioredis="~2.0.0"
apispec="~3.3.0"
async-timeout="~4.0.2"
base58="~2.1.0"
ConfigArgParse="~1.5.3"
deepmerge="~0.3.0"
ecdsa="~0.16.1"
jsonpath_ng="1.5.2"
Markdown="~3.1.1"
markupsafe="2.0.1"
marshmallow="~3.20.1"
msgpack="~1.0"
multiformats="~0.2.1"
nest_asyncio="~1.5.5"
packaging="~23.1"
portalocker="~2.7.0"
prompt_toolkit=">=2.0.9,<2.1.0"
pydid="~0.3.6"
pyjwt="~2.8.0"
pyld="~2.0.3"
pynacl="~1.5.0"
python-dateutil="~2.8.1"
python-json-logger="~2.0.7"
pytz="~2021.1"
pyyaml="~6.0.1"
qrcode = {version = ">=6.1,<7.0", extras = ["pil"]}
requests="~2.31.0"
rlp="1.2.0"
unflatten="~0.1"
sd_jwt = {git = "https://github.com/openwallet-foundation-labs/sd-jwt-python.git"}

# askar
aries-askar= { version = "~0.2.5", optional = true }
indy-credx= { version = "~1.0.0", optional = true }
indy-vdr= { version = "~0.3.3", optional = true }

# bbs
ursa-bbs-signatures= { version = "~1.0.1", optional = true }

# indy
python3-indy= { version = "^1.11.1", optional = true }
peerdid = "^0.5.2"

[tool.poetry.extras]
askar = [
      "aries-askar",
      "indy-credx",
      "indy-vdr"
]
bbs = [
    "ursa-bbs-signatures"
]
indy = [
     "python3-indy"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
